<resources>
    <string name="app_name">FS Korinthias</string>
    <string name="title_home">FS Korinthias</string>
    <string name="title_dashboard">FS Korinthias</string>
    <string name="title_home_bottom">Important</string>
    <string name="title_dashboard_bottom">All news</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_details">FS Korinthias</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="transition_photo" translatable="false">transition_photo</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="mainShareNews">Article from FS Korinthias:</string>
    <string name="shareNews">Share app:</string>

    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="notification_title">New article</string>
    <string name="notification_message" translatable="false">FSKorinthias News</string>
    <string name="save_first_news_article" translatable="false">first_news_article</string>
    <string name="action_policy">Privacy policy</string>
    <string name="title_efimeries">On Duty</string>
    <string name="title_activity_efimeries_details" translatable="false" />
    <string name="action_info">It is clarified that, based on special provisions of Presidential Decree 479/1981, in the areas where 2 to 6 pharmacies operate, the on-call pharmacy: and Holidays are normally open from 9:00 to 13:00 During the noon break, as well as the rest beyond its opening hours  (from 23.00 for the period from 16 May to 15 October, from 22.00 for the period from 16 October to 15 May, and from 13:00 on Sundays and Holidays), the on-duty pharmacist posts his name, contact phone number, the address of the residence on the facade of the pharmacy and serves the public if it receives a telephone call.</string>
    <string name="epilogiOK">OK</string>
    <string name="enimerosiFinal">On Duty Info</string>
    <string name="efimeriesShare">On Duty info:</string>
    <string name="action_epikoinonia">Contact</string>
    <string name="epikoinoniaMeSyllogo">Contact FS Korinthias</string>
    <string name="mainShareApp">"Download FS Korinthias application from below link, read most recent articles and find pharmacies on duty: https://play.google.com/store/apps/details?id=com.george.fs_korinthias "</string>
    <string name="epikoinoniaTilefona">Adeimantou 63 Korinthos \nTelephone 2741029778  \nFax 2741029778  \nemail : info@fsk.gr</string>
    <string name="action_apostoli">Share app</string>
    <string name="shareApplication">Share app:</string>
    <string name="dummy_text" translatable="false">Ολοκληρώθηκε σήμερα η δωρεά ειδών ατομικής προστασίας
        και υγιεινής στα Κέντρα Υγείας τοου Νομού. Ο ΠΕΙΦΑΣΥΝ προσέφερε στα 6 Κέντρα Υγείας του
        Νομού Κορινθίας μάσκες και αντισηπτικά με προτεραιότητα σε αυτά αστικού τύπου. Είχε προηγηθεί
        αντίστοιχη δράση προσφοράς στο Νοσοκομείο της Κορίνθου και εξοπλισμού των μονάδων του ΕΚΑΒ…</string>
    <string name="video">Video</string>
    <string name="hint_editTextView_sliding_layout">Comment</string>
    <string name="numberMessages">messages</string>
    <string name="error_firebase_auth">Error occurred. Please try again!</string>
    <string name="log_out">Log out</string>
    <string name="msg_subscribed" translatable="false">Succesfull subscribed</string>
    <string name="msg_subscribe_failed" translatable="false">Subscribe failed</string>
    <string name="happyComment">&#128522;</string>
    <string name="saintComment">&#128519;</string>
    <string name="loveComment">&#128525;</string>
    <string name="tooBadComment">Too bad!</string>
    <string name="angerComment">&#128544;</string>
    <string name="shoutComment">&#128549;</string>
    <string name="bravoComment">Bravo!</string>
    <string name="thumbUpComment">&#128077;</string>
    <string name="agreeComment">I agree</string>
    <string name="disAgreeComment">I disagree</string>

</resources>
