<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.george.kotlin_medicines.KotlinMainActivity">
    <item
        android:id="@+id/action_policy"
        android:orderInCategory="100"
        android:title="@string/action_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_epikoinonia"
        android:orderInCategory="100"
        android:title="@string/action_epikoinonia"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_apostoli"
        android:orderInCategory="100"
        android:title="@string/action_apostoli"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="Log out"
        app:showAsAction="never" />

</menu>
