<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.george.fs_korinthias.ui.allNews.AllNewsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_all_news" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.george.fs_korinthias.ui.important.ImportantFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_important" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.george.fs_korinthias.ui.efimeries.EfimeriesFragment"
        android:label="@string/title_efimeries"
        tools:layout="@layout/fragment_efimeries" />
</navigation>
